# sampling_kinematics_plugin

./: README.md
.github/workflows/: main.yml
sampling_kinematics_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
sampling_kinematics_plugin/include/sampling_kinematics_plugin/: external_axis_sampling_kinematics_plugin.h
sampling_kinematics_plugin/src/: external_axis_sampling_kinematics_plugin.cpp
sampling_kinematics_plugin/test/: utest.cpp
sampling_kinematics_plugin/test/abb_irb2400_rail/: abb_irb2400_rail.srdf  abb_irb2400_rail.xacro  joint_limits.yaml  kinematics.yaml  test.rostest
sampling_kinematics_plugin/test/abb_irb2400_rail/abb_irb2400/: NOTICE  irb2400_12_155_macro.xacro
