<?xml version="1.0"?>
<package format="2">
  <name>sampling_kinematics_plugin</name>
  <version>0.0.0</version>
  <description>The sampling_kinematics_plugin package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>tf2_eigen</depend>

  <export>
    <moveit_core plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
